--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Test
       run: |
         npm ci
+        npm run build
         xvfb-run --auto-servernum npm test
 
   publish-npm:
